# cpplint

./: .pre-commit-config.yaml  .pytest.ini  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  cpplint.py  cpplint_clitest.py  cpplint_unittest.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
samples/boost-sample/: headers_exclude.def
samples/boost-sample/include/boost/math/: octonion.hpp
samples/chromium-sample/src/: chrome_content_renderer_client.cc
samples/codelite-sample/src/: pptable.cpp
samples/protobuf-sample/src/: descriptor_unittest.cc
samples/v8-sample/src/: interface-descriptors.h
samples/vlc-sample/: simple.def
